网络请求通路测试 启用viewbingding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Ladon</string>
+    <string name="app_name">拉东</string>
+    <string name="app_splash_company">华安科技：贺国庆</string>
 </resources>
