--- a/module_visitor/src/main/res/values/strings.xml
+++ b/module_visitor/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="pet_module_name">module_pet</string>
+    <string name="visitor_module_name">module_visitor</string>
 </resources>
