--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">拉东</string>
-    <string name="app_splash_company">华安科技：贺国庆</string>
+    <string name="app_splash_skip">跳过：3秒</string>
 </resources>
