--- a/module_visitor/src/main/res/values/strings.xml
+++ b/module_visitor/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="visitor_module_name">module_visitor</string>
+    <string name="visitor_search_hint">请输入搜索的内容</string>
+    <string name="visitor_skip_main">游客进入</string>
+    <string name="visitor_login_phone">请输入手机号</string>
+    <string name="visitor_login_sms">请输入验证码</string>
+    <string name="visitor_login_send_sms">获取验证码</string>
+    <string name="visitor_login">登录</string>
 </resources>
